@@ -9,210 +9,197 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class UnoTest {
-
-    private List<String> playerNameList;
-
+    private List<String> oneName;
+    private List<String> twoNames;
+    private List<String> threeNames;
     private NumericCard blueThree;
     private NumericCard blueSeven;
     private NumericCard yellowTwo;
+    private NumericCard greenOne;
+    private NumericCard greenFive;
+    private NumericCard greenEight;
     private NumericCard greenNine;
     private NumericCard redThree;
     private NumericCard redFive;
     private NumericCard redSeven;
-    private NumericCard redEight;
     private NumericCard redNine;
-    private Draw2Card       redDraw2;
-    private SkipCard        blueSkip;
-    private ReverseCard     greenReverse;
+    private Draw2Card redDraw2;
+    private Draw2Card blueDraw2;
+    private SkipCard blueSkip;
+    private ReverseCard yellowRev;
     private UndeployedWildCard undeployedWild;
+    DeployedWildCard deployedGreenWild;
+
 
     @BeforeEach
     void setUp() {
-        playerNameList = Arrays.asList("Maxi", "Gabor");
-        redThree    = new NumericCard(Color.RED,    3);
-        redFive     = new NumericCard(Color.RED,    5);
-        redSeven    = new NumericCard(Color.RED,    7);
-        redEight    = new NumericCard(Color.RED,    8);
-        redNine     = new NumericCard(Color.RED,    9);
-        blueThree   = new NumericCard(Color.BLUE,   3);
-        blueSeven   = new NumericCard(Color.BLUE,   7);
-        yellowTwo   = new NumericCard(Color.YELLOW, 2);
-        greenNine   = new NumericCard(Color.GREEN,  9);
-        redDraw2       = new Draw2Card(Color.RED);
-        blueSkip       = new SkipCard(Color.BLUE);
-        greenReverse   = new ReverseCard(Color.GREEN);
+        oneName = List.of("Solo");
+        twoNames = Arrays.asList("Maxi", "Gabor");
+        threeNames = Arrays.asList("Maxi", "Gabor", "Ana");
+
+        redThree = new NumericCard(Color.RED, 3);
+        redFive = new NumericCard(Color.RED, 5);
+        redSeven = new NumericCard(Color.RED, 7);
+        redNine = new NumericCard(Color.RED, 9);
+        blueThree = new NumericCard(Color.BLUE, 3);
+        blueSeven = new NumericCard(Color.BLUE, 7);
+        yellowTwo = new NumericCard(Color.YELLOW, 2);
+        greenOne = new NumericCard(Color.GREEN, 1);
+        greenFive = new NumericCard(Color.GREEN, 5);
+        greenEight = new NumericCard(Color.GREEN, 8);
+        greenNine = new NumericCard(Color.GREEN, 9);
+        redDraw2 = new Draw2Card(Color.RED);
+        blueDraw2 = new Draw2Card(Color.BLUE);
+        blueSkip = new SkipCard(Color.BLUE);
+        yellowRev = new ReverseCard(Color.YELLOW);
         undeployedWild = new UndeployedWildCard();
+        deployedGreenWild = new DeployedWildCard(Color.GREEN);
+
     }
 
     @Test
     void topCardIsFirstCardFromDeck() {
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(redFive));
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(redFive));
         assertEquals(redFive, game.getTopCard());
     }
 
     @Test
     void numericCardSameColorIsCompatible() {
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(blueThree, blueSeven));
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(blueThree, blueSeven));
         assertDoesNotThrow(() -> game.playCard("Maxi", blueSeven));
     }
 
     @Test
     void numericCardDifferentColorAndNumberIsNotCompatible() {
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(yellowTwo, greenNine));
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(yellowTwo, greenNine));
         assertThrows(InvalidMoveException.class,
                 () -> game.playCard("Maxi", greenNine));
     }
 
     @Test
     void bothPlayersCantPlaySequentially() {
-        NumericCard greenOne  = new NumericCard(Color.GREEN, 1);
-        NumericCard greenFive = new NumericCard(Color.GREEN, 5);
-        NumericCard greenEight= new NumericCard(Color.GREEN, 8);
-
         Uno game = Uno.withPlayersAndDeck(
-                playerNameList,
+                twoNames,
                 List.of(greenOne, greenFive, greenEight)
         );
 
-        assertDoesNotThrow(() -> game.playCard("Maxi",  greenFive));
+        assertDoesNotThrow(() -> game.playCard("Maxi", greenFive));
         // juego terminado, maxi se quedo sin cartas
         assertThrows(IllegalStateException.class, () -> game.playCard("Gabor", greenEight));
     }
 
     @Test
     void bothPlayersPlaySequentially() {
-        NumericCard greenOne  = new NumericCard(Color.GREEN, 1);
-        NumericCard greenFive = new NumericCard(Color.GREEN, 5);
-        NumericCard greenEight= new NumericCard(Color.GREEN, 8);
-        NumericCard yellowTwo = new NumericCard(Color.YELLOW, 2);
-
         Uno game = Uno.withPlayersAndDeck(
-                playerNameList,
-                List.of(greenOne, greenFive, greenEight, yellowTwo)
+                twoNames,
+                List.of(greenOne, yellowTwo, greenEight, greenFive)
         );
 
-        assertDoesNotThrow(() -> game.playCard("Maxi",  greenFive));
+        assertDoesNotThrow(() -> game.playCard("Maxi", greenFive));
         assertDoesNotThrow(() -> game.playCard("Gabor", greenEight));
     }
 
     @Test
-    void drawTwoAppliesEffectAndIsCompatibleByColorOrType() {
-        Draw2Card draw2 = new Draw2Card(Color.RED);
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(redFive, draw2));
-        assertDoesNotThrow(() -> game.playCard("Maxi", draw2));
+    void playerCantPlayRandomCard() {
+        Uno game = Uno.withPlayersAndDeck(
+                twoNames,
+                List.of(greenOne, greenFive, greenEight, yellowTwo)
+        );
+
+        assertThrows(InvalidMoveException.class,() -> game.playCard("Maxi", greenEight));
+    }
+
+    @Test
+    void playerCantPlayNotHisTurn() {
+        Uno game = Uno.withPlayersAndDeck(
+                twoNames,
+                List.of(greenOne, greenFive, greenEight, yellowTwo)
+        );
+
+        assertThrows(InvalidMoveException.class,() -> game.playCard("Gabor", greenEight));
+    }
+
+    @Test
+    void invalidMoveDoesNotAdvanceGameState() {
+        Uno game = Uno.withPlayersAndDeck(
+                twoNames,
+                List.of(greenOne, greenFive, greenEight, yellowTwo)
+        );
+
+        assertThrows(InvalidMoveException.class,() -> game.playCard("Maxi", yellowTwo));
+        assertDoesNotThrow(() -> game.playCard("Maxi", greenFive));
+        assertDoesNotThrow(() -> game.playCard("Gabor", greenEight));
+    }
+
+    @Test
+    void drawTwoIsCompatibleByColor() {
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(redFive, redDraw2));
+        assertDoesNotThrow(() -> game.playCard("Maxi", redDraw2));
+    }
+
+    @Test
+    void drawTwoIsCompatibleByType() {
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(blueDraw2, redDraw2));
+        assertDoesNotThrow(() -> game.playCard("Maxi", redDraw2));
+    }
+
+    @Test
+    void drawTwoAppliesEffect() {
+        List<Card> deck = List.of(
+                //top,   maxi,     gabor,     maxi,     gabor,     maxi
+                redFive, redDraw2, blueThree, redThree, blueThree, blueThree
+        );
+        Uno game = Uno.withPlayersAndDeck(twoNames, deck);
+        // agregamos cartas a la pila
+        // pero sin tener que repartir 7 a cada jugador antes
+        game.addCardsToDrawPile(List.of(redSeven, blueThree));
+        assertDoesNotThrow(() -> game.playCard("Maxi", redDraw2));
+        assertDoesNotThrow(() -> game.playCard("Maxi", redThree));
+        assertDoesNotThrow(() -> game.playCard("Gabor", redSeven));
     }
 
     @Test
     void skipCardSkipsNextPlayer() {
-        SkipCard skip = new SkipCard(Color.BLUE);
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(blueThree, skip));
-        assertDoesNotThrow(() -> game.playCard("Maxi", skip));
+        Uno game = Uno.withPlayersAndDeck(threeNames, List.of(blueThree, blueSkip, yellowTwo, blueSeven, yellowTwo));
+        assertDoesNotThrow(() -> game.playCard("Maxi", blueSkip));
+        assertEquals("Ana", game.getCurrentPlayer().getName());
+        assertDoesNotThrow(() -> game.playCard("Ana", blueSeven));
     }
 
     @Test
     void reverseCardChangesDirection() {
-        ReverseCard rev = new ReverseCard(Color.YELLOW);
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(yellowTwo, rev));
-        assertDoesNotThrow(() -> game.playCard("Maxi", rev));
-    }
-
-    @Test
-    void wildCardAlwaysCompatible() {
-        DeployedWildCard wild = new DeployedWildCard(Color.GREEN);
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(redFive, wild));
-        assertDoesNotThrow(() -> game.playCard("Maxi", wild));
+        Uno game = Uno.withPlayersAndDeck(threeNames, List.of(yellowTwo, yellowRev, blueSeven, yellowTwo, blueSeven));
+        assertDoesNotThrow(() -> game.playCard("Maxi", yellowRev));
+        assertDoesNotThrow(() -> game.playCard("Ana", yellowTwo));
     }
 
     @Test
     void gameFailsWithSinglePlayer() {
         assertThrows(IllegalArgumentException.class,
-                () -> Uno.withPlayersAndDeck(List.of("Solo"), List.of(redFive)));
+                () -> Uno.withPlayersAndDeck(oneName, List.of(redFive)));
     }
 
     @Test
-    void reverseReversesDirectionWithThreePlayers() {
-        List<String> names = Arrays.asList("Maxi", "Gabor", "Ana");
-
-        NumericCard greenOne  = new NumericCard(Color.GREEN, 1);
-        NumericCard greenFive = new NumericCard(Color.GREEN, 5);
-        NumericCard greenEight= new NumericCard(Color.GREEN, 8);
-
-        Uno game = Uno.withPlayersAndDeck(
-                names,
-                List.of(greenOne, greenReverse, greenFive, greenEight, yellowTwo)
-        );
-
-        game.playCard("Maxi", greenReverse);
-        assertEquals("Ana", game.getCurrentPlayer().getName());
-    }
-
-    @Test
-    void skipCardReallySkipsNextPlayer() {
-        List<String> names = Arrays.asList("Maxi", "Gabor", "Ana");
-
-        Uno game = Uno.withPlayersAndDeck(
-                names,
-                List.of(blueThree, blueSkip, blueSeven, blueThree, blueSeven)
-        );
-
-        game.playCard("Maxi", blueSkip);
-        assertEquals("Ana", game.getCurrentPlayer().getName());
+    void gameFailsWithNoCardsInDeck() {
+        assertThrows(IllegalArgumentException.class,
+                () -> Uno.withPlayersAndDeck(twoNames, List.of()));
     }
 
     @Test
     void undeployedWildCardMustChooseColor() {
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(redFive, undeployedWild));
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(redFive, undeployedWild));
         assertThrows(InvalidMoveException.class,
                 () -> game.playCard("Maxi", undeployedWild));
     }
 
     @Test
-    void deployedWildCardIsPlayable() {
-        // top card is RED; Maxi starts with a GREEN deployed wild in hand
-        DeployedWildCard greenWild = new DeployedWildCard(Color.GREEN);
+    void colorizedWildCardLetsNextPlayerFollowColor() {
+        Uno game = Uno.withPlayersAndDeck(twoNames, List.of(redFive, undeployedWild, greenNine, redFive));
 
-        Uno game = Uno.withPlayersAndDeck(
-                playerNameList,
-                List.of(redFive, greenWild)
-        );
-
-        // Maxi plays the pre-coloured wild; should be legal and become top card
-        assertDoesNotThrow(() -> game.playCard("Maxi", greenWild));
-        assertEquals(Color.GREEN, game.getTopCard().getColor());
-    }
-
-    @Test
-    void colorizedWildCardLetsNextPlayerFollowColour() {
-    /* Deck layout (after top-card removal rows are dealt 7-by-7):
-       round-0 Maxi  → undeployedWild
-               Gabor → greenNine
-    */
-        List<Card> deck = List.of(
-                redFive,          // top card
-                undeployedWild,   // a Maxi
-                greenNine,         // a Gabor
-                redFive           // a maxi
-        );
-
-        Uno game = Uno.withPlayersAndDeck(playerNameList, deck);
-
-        // Maxi colours the wild GREEN and plays it
         assertDoesNotThrow(() ->
                 game.playCard("Maxi", undeployedWild.colorize(Color.GREEN)));
         assertEquals(Color.GREEN, game.getTopCard().getColor());
-
-        // Turn passes to Gabor, who can now play GREEN numeric
         assertDoesNotThrow(() -> game.playCard("Gabor", greenNine));
-    }
-
-    @Test
-    void drawTwoSkipsNextAndReturnsTurn() {
-        Uno game = Uno.withPlayersAndDeck(
-                playerNameList,
-                List.of(redFive, redDraw2, redFive, blueThree)
-        );
-        game.playCard("Maxi", redDraw2);
-        assertEquals("Maxi", game.getCurrentPlayer().getName());
     }
 
     @Test
@@ -221,7 +208,7 @@ public class UnoTest {
                 redFive, redSeven, redThree, blueThree, yellowTwo, greenNine,
                 blueSeven, greenNine, yellowTwo, blueSeven, greenNine, yellowTwo
         );
-        Uno game = Uno.withPlayersAndDeck(playerNameList, deck);
+        Uno game = Uno.withPlayersAndDeck(twoNames, deck);
         assertThrows(InvalidMoveException.class,
                 () -> game.playCard("Maxi", redSeven.uno()));
     }
@@ -229,9 +216,12 @@ public class UnoTest {
     @Test
     void forgettingUnoPreventsWin() {
         List<Card> deck = List.of(
-                redFive, redSeven, redThree, redNine, blueThree, redEight
+                redFive, redSeven, redThree, redNine, blueThree
         );
-        Uno game = Uno.withPlayersAndDeck(playerNameList, deck);
+        Uno game = Uno.withPlayersAndDeck(twoNames, deck);
+        // agregamos cartas a la pila
+        // pero sin tener que repartir 7 a cada jugador antes
+        game.addCardsToDrawPile(List.of(greenOne, greenFive, greenEight));
 
         game.playCard("Maxi", redSeven);
         game.playCard("Gabor", redThree);
@@ -241,11 +231,19 @@ public class UnoTest {
     }
 
     @Test
-    void unoDeclaredAllowsWin() {
-        Uno game = Uno.withPlayersAndDeck(playerNameList, List.of(redFive, redSeven));
+    void declaringUnoAllowsWin() {
+        List<Card> deck = List.of(
+                redFive, redSeven, redThree, redNine, blueThree
+        );
+        Uno game = Uno.withPlayersAndDeck(twoNames, deck);
+        // agregamos cartas a la pila
+        // pero sin tener que repartir 7 a cada jugador antes
+        game.addCardsToDrawPile(List.of(greenOne, greenFive, greenEight));
+
         game.playCard("Maxi", redSeven.uno());
+        game.playCard("Gabor", redThree);
+        game.playCard("Maxi", redNine);
 
         assertTrue(game.getWinner().isPresent());
-        assertEquals("Maxi", game.getWinner().get().getName());
     }
 }
